correct hom text display on mobile

--- a/app/assets/stylesheets/components/_info.scss
+++ b/app/assets/stylesheets/components/_info.scss
@@ -102,9 +102,9 @@
     img {
       position: absolute;
       border-radius: 50%;
-      top: 12px;
+      top: 55px;
       right: 12px;
-      height: 20%;
+      height: 8%;
     }
   }
   h1 {
